--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,11 @@
     box-sizing: border-box;
 }
 
-html, body {
+/* html, body {
     height: 100%;
     width: 100%;
     overflow-x: hidden;
-}
+} */
 
 body {
     background-color: #1F2123;
@@ -68,14 +68,7 @@ body {
 }
 
 .messages::after {
-    content: '';
-    position: absolute;
-    bottom: 70px;
-    left: 0;
-    width: 100%;
-    height: 50px;
-    background: linear-gradient(to bottom, transparent, #1a1a1a);
-    pointer-events: none;
+    display: none;
 }
 
 .messages div {
